added new type for sonderfertigkeiten

--- a/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.html
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.html
@@ -55,7 +55,7 @@
 		</div>
 		<div class="common_header common_header9">
 			<span data-i18n="MU" >MU</span>
-			<input type="number" name='attr_mut_gesamt' readonly />
+		  <input type="number" name='attr_mut_gesamt' readonly />
 		</div>
 		<div class="common_header common_header10">
 			<span data-i18n="KL">KL</span>
@@ -383,23 +383,25 @@
 		<h2 data-i18n="sonderfertigkeiten">Sonderfertigkeiten</h2>
 
 		<input name="attr_sonderfertigkeit_selector" type="radio" class="sonderfertigkeit-cb0" title="all" value="0" checked></input>
-		<span class="sonderfertigkeit-cb0">All</span>
-		<input name="attr_sonderfertigkeit_selector" type="radio" class="sonderfertigkeit-cb1" title="sonderfertigkeitspruch" value="1"></input>
-		<span class="sonderfertigkeit-cb1">Allgemeine Sonderfertigkeiten</span>
-		<input name="attr_sonderfertigkeit_selector" type="radio" class="sonderfertigkeit-cb2" title="sonderfertigkeitspruch" value="2"></input>
-		<span class="sonderfertigkeit-cb2">Talentsonderfertigkeiten</span>
-		<input name="attr_sonderfertigkeit_selector" type="radio" class="sonderfertigkeit-cb3" title="sonderfertigkeitspruch" value="3"></input>
-		<span class="sonderfertigkeit-cb3">Kampfsonderfertigkeiten</span>
-		<input name="attr_sonderfertigkeit_selector" type="radio" class="sonderfertigkeit-cb4" title="sonderfertigkeitspruch" value="4"></input>
-		<span class="sonderfertigkeit-cb4">Magiesonderfertigkeiten</span>
-		<input name="attr_sonderfertigkeit_selector" type="radio" class="sonderfertigkeit-cb5" title="sonderfertigkeitspruch" value="5"></input>
-		<span class="sonderfertigkeit-cb5">Karmale Sonderfertigkeiten</span>
-		<input name="attr_sonderfertigkeit_selector" type="radio" class="sonderfertigkeit-cb6" title="sonderfertigkeitspruch" value="6"></input>
-		<span class="sonderfertigkeit-cb6">Vorteile</span>
-		<input name="attr_sonderfertigkeit_selector" type="radio" class="sonderfertigkeit-cb7" title="sonderfertigkeitspruch" value="7"></input>
-		<span class="sonderfertigkeit-cb7">Nachteile</span>
-		<input name="attr_sonderfertigkeit_selector" type="radio" class="sonderfertigkeit-cb8" title="sonderfertigkeitspruch" value="8"></input>
-		<span class="sonderfertigkeit-cb8">Sonstige</span>
+		<span class="sonderfertigkeit-cb0" data-i18n="alle">Alle</span>
+		<input name="attr_sonderfertigkeit_selector" type="radio" class="sonderfertigkeit-cb1" title="sonderfertigkeit" value="1"></input>
+		<span class="sonderfertigkeit-cb1" data-i18n="allgemeine-sonderfertigkeit">Allgemeine Sonderfertigkeit</span>
+		<input name="attr_sonderfertigkeit_selector" type="radio" class="sonderfertigkeit-cb2" title="sonderfertigkeit" value="2"></input>
+		<span class="sonderfertigkeit-cb2"  data-i18n="talent-sonderfertigkeit">Talentsonderfertigkeit</span>
+		<input name="attr_sonderfertigkeit_selector" type="radio" class="sonderfertigkeit-cb3" title="sonderfertigkeit" value="3"></input>
+		<span class="sonderfertigkeit-cb3" data-i18n="kampfsonderfertigkeit">Kampfsonderfertigkeit</span>
+		<input name="attr_sonderfertigkeit_selector" type="radio" class="sonderfertigkeit-cb4" title="sonderfertigkeit" value="4"></input>
+		<span class="sonderfertigkeit-cb4" data-i18n="magiesonderfertigkeit">Magiesonderfertigkeit</span>
+		<input name="attr_sonderfertigkeit_selector" type="radio" class="sonderfertigkeit-cb5" title="sonderfertigkeit" value="5"></input>
+		<span class="sonderfertigkeit-cb5" data-i18n="karmale-sonderfertigkeit">Karmale Sonderfertigkeit</span>
+		<input name="attr_sonderfertigkeit_selector" type="radio" class="sonderfertigkeit-cb6" title="sonderfertigkeit" value="6"></input>
+		<span class="sonderfertigkeit-cb6" data-i18n="vorteil">Vorteil</span>
+		<input name="attr_sonderfertigkeit_selector" type="radio" class="sonderfertigkeit-cb7" title="sonderfertigkeit" value="7"></input>
+		<span class="sonderfertigkeit-cb7" data-i18n="nachteil">Nachteile</span>
+		<input name="attr_sonderfertigkeit_selector" type="radio" class="sonderfertigkeit-cb9" title="sonderfertigkeit" value="9"></input>
+		<span class="sonderfertigkeit-cb9" data-i18n="schipsf">SchiP-Sonderfertigkeit</span>
+		<input name="attr_sonderfertigkeit_selector" type="radio" class="sonderfertigkeit-cb8" title="sonderfertigkeit" value="8"></input>
+		<span class="sonderfertigkeit-cb8" data-i18n="sonstiges">Sonstige</span>
 
 		<div class="sonderfertigkeitliste">
 			<fieldset class="repeating_sonderfertigkeit">
@@ -412,10 +414,11 @@
 				<input name="attr_sonderfertigkeittyp" type="radio" class="hidden sonderfertigkeit-cb6" value="6"></input>
 				<input name="attr_sonderfertigkeittyp" type="radio" class="hidden sonderfertigkeit-cb7" value="7"></input>
 				<input name="attr_sonderfertigkeittyp" type="radio" class="hidden sonderfertigkeit-cb8" value="8"></input>
+				<input name="attr_sonderfertigkeittyp" type="radio" class="hidden sonderfertigkeit-cb9" value="9"></input>
 				<div class="modifikator-grid sonderfertigkeit-filtered">
 					<span  data-i18n="typ">Typ</span>
 					<select class="sonderfertigkeittyp-in" name="attr_sonderfertigkeittyp" >
-						<option value="0"  selected data-i18n="bitte-auswaehlen">Bitte auswählen</option>
+						<option value="0"  selected data-i18n="typ-auswaehlen">Typ auswählen</option>
 						<option value="1" data-i18n="allgemeine-sonderfertigkeit">Allgemeine Sonderfertigkeit</option>
 						<option value="2" data-i18n="talent-sonderfertigkeit">Talentsonderfertigkeit</option>
 						<option value="3" data-i18n="kampfsonderfertigkeit">Kampfsonderfertigkeit</option>
@@ -423,6 +426,7 @@
 						<option value="5" data-i18n="karmale-sonderfertigkeit">Karmale Sonderfertigkeit</option>
 						<option value="6" data-i18n="vorteil">Vorteil</option>
 						<option value="7" data-i18n="nachteil">Nachteil</option>
+						<option value="9" data-i18n="schipsf">SchiP-Sonderfertigkeit</option>
 						<option value="8" data-i18n="sonstiges">Sonstiges</option>
 					</select>
 					<input class="modifikator modifikator-label" type="text" name='attr_sonderfertigkeit_name' value='Name'/>
@@ -796,7 +800,6 @@
         <span class="talent talent-header8" data-i18n="status-aktiviert">Status aktiviert</span>
 				<span class="talent talent-header10" data-i18n="gesamtmodifikator">Gesamtmodifikator</span>
 				<span class="talent talent-header11" data-i18n="anmerkung">Anmerkung</span>
-
 
 				<span class="talent talent-label" data-i18n="fliegen">Fliegen</span>
 				 <select class="talent talent-eigenschaft1" name="attr_fliegen_eigenschaft1" >
@@ -4496,7 +4499,7 @@ Baustelle!
 						</div>
 					</td>
 					<td><input type="text" name="attr_waffe_name_1" value="Waffenlos" readonly><input type="radio" name="attr_nk_waffe" value="1" checked ></td>
-					<td><input type="text" name="attr_schild_name_1" readonly><input type="radio" name="attr_nh_waffe" value="1" checked ></td>
+					<td><input type="text" name="attr_schild_name_1" value="Waffenlos" readonly><input type="radio" name="attr_nh_waffe" value="1" checked ></td>
 				</tr>
 				<tr>
 						<td><input type="text" name="attr_waffe_name_2" readonly><input type="radio" name="attr_nk_waffe" value="2" ></td>
@@ -4942,9 +4945,9 @@ Baustelle!
 	  					<th  data-i18n="anmerkung">anmerkung</th>
 	  				</tr>
 	  				<tr align="center">
-	  					<td class="padding-1"><input type="text" name="attr_schild_name_1" ></td>
+	  					<td class="padding-1"><input type="text" name="attr_schild_name_1" value="Waffenlos"></td>
 	  					<td class="padding-1"><select name="attr_schild_typ_1"  >
-	  							<option value="0" selected>---</option>
+	  							<option value="0">---</option>
 	  							<option value="schilde" data-i18n="schilde">Schilde</option>
 	  							<option value="parierwaffe" data-i18n="parierwaffe">Parierwaffe</option>
 	  							<option value="dolche" data-i18n="dolche">Dolche</option>
@@ -4952,7 +4955,7 @@ Baustelle!
 	  							<option value="hiebwaffen" data-i18n="hiebwaffen">Hiebwaffen</option>
 	  							<option value="kettenwaffen" data-i18n="kettenwaffen">Kettenwaffen</option>
 	  							<option value="lanzen" data-i18n="lanzen">Lanzen</option>
-	  							<option value="raufen" data-i18n="raufen">Raufen</option>
+	  							<option value="raufen" data-i18n="raufen" selected>Raufen</option>
 	  							<option value="schwerter" data-i18n="schwerter">Schwerter</option>
 	  							<option value="stangenwaffen" data-i18n="stangenwaffen">Stangenwaffen</option>
 	  							<option value="zweihandhiebwaffen" data-i18n="zweihandhiebwaffen">Zweihandhiebwaffen</option>
@@ -4960,17 +4963,17 @@ Baustelle!
 	  						</select></td>
 	  					<td class="padding-1"><select  name="attr_schild_leiteigenschaft_1">
 	  							<option value="0">--</option>
-	  							<option value="KK" data-i18n="KK">KK</option>
+	  							<option value="KK" data-i18n="KK" selected>KK</option>
 	  							<option value="GE" data-i18n="GE">GE</option>
 	  						</select></td>
-	  					<td class="padding-1"><input  type="number" name="attr_schild_leiteigenschaft_input_1" value="0"></td>
+	  					<td class="padding-1"><input  type="number" name="attr_schild_leiteigenschaft_input_1" value="14"></td>
 	  					<td class="padding-1"><input  type="number" readonly name="attr_schild_tp_bonus_1" value="0"></td>
 	  					<td class="padding-1"><input  type="number" name="attr_schild_tp_anz_wuerfel_1" value="1"><span data-i18n="d6">W6+</span></td>
 	  					<td class="padding-1"><input  type="number" name="attr_schild_tp_wert_1" value="0"></td>
 	  					<td class="padding-1"><input  type="number" name="attr_schild_at_1" value="0"></td>
 	  					<td class="padding-1"><input  type="number" name="attr_schild_pa_1" value="0"></td>
 	  					<td class="padding-1"><select name="attr_schild_rw_1" >
-	  							<option value="1" data-i18n="kurz">kurz</option>
+	  							<option value="1" data-i18n="kurz" selected>kurz</option>
 	  							<option value="2" data-i18n="mittel">mittel</option>
 	  							<option value="3" data-i18n="lang">lang</option>
 	  						</select></td>
