fixed readonly attributes displayed in grey

--- a/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.html
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.html
@@ -4063,6 +4063,8 @@ Baustelle!
     <button class="kampf-header kampf-header-ini-roll default" type="roll" value="&{template:DSA-Initiative} {{Name=@{character_name}}} {{Wert=[[1d6+@{ini_gesamt}+(@{ini_grundwert}/100)&{tracker}]]}}">INI</button>
     <span class="kampf-header kampf-header-label1" data-i18n="aktstatus">akt. Status </span>
 		<input class="kampf-header kampf-header-value1" type="number" name="attr_kampfstatus_modifier" value="0" readonly/>
+		<span class="kampf-header kampf-header-label1b" data-i18n="freier-modifikator">freier Kampf-Mod. </span>
+		<input class="kampf-header kampf-header-value1b" type="number" name="attr_kampf_modifier" value="0" />
     <span class="kampf-header kampf-header-label2" data-i18n="sf-modat">SF-Mod. AT</span>
 		<input class="kampf-header kampf-header-value2" type="number" name="attr_at_sf_mod"  value="0" readonly/>
     <span class="kampf-header kampf-header-label3" data-i18n="sf-modpa">SF-Mod. PA</span>
