added new combat modifier for free input

--- a/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.html
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.html
@@ -4060,7 +4060,7 @@ Baustelle!
 <div class="kampf-header-grid">
     <span class="kampf-header kampf-header-ini-label" data-i18n="initiative">Initiative</span>
 		<input class="kampf-header kampf-header-ini-value" type="number" name="attr_ini_gesamt"  value="0" readonly/>
-    <button class="kampf-header kampf-header-ini-roll default" type="roll" value="&{template:DSA-Initiative} {{Name=@{character_name}}} {{Wert=[[1d6+@{ini_gesamt}+(@{ini_grundwert}/100)&{tracker}]]}}">INI</button>
+    <button class="kampf-header kampf-header-ini-roll default" type="roll" value="&{template:DSA-Initiative} {{Name=@{character_name}}} {{Wert=[[1d6+@{ini_gesamt}+@{mod_option}+@{kampf_modifier}+(@{ini_grundwert}/100)&{tracker}]]}} {{mod=[[(@{mod_option}+@{kampf_modifier})]]}}">INI</button>
     <span class="kampf-header kampf-header-label1" data-i18n="aktstatus">akt. Status </span>
 		<input class="kampf-header kampf-header-value1" type="number" name="attr_kampfstatus_modifier" value="0" readonly/>
 		<span class="kampf-header kampf-header-label1b" data-i18n="freier-modifikator">freier Kampf-Mod. </span>
@@ -4355,7 +4355,7 @@ Baustelle!
 <div class="kampf-nah-grid">
 	<span class="kampf-nah kampf-nah-label1" data-i18n="attacke">Attacke</span>
 	<input class="kampf-nah kampf-nah-value1" type="number" name="attr_at_roll"  value="0" readonly />
-	<button class="default kampf-nah kampf-nah-button1 " type="roll" value="@{output_option} &{template:DSA-Nahkampf-AT} {{name=Attacke}} {{subtags=Nahkampf}} {{wurf=[[1d20cs1cf20]]}} {{wert=[[(@{at_roll}+@{mod_option})]]}} {{mod=[[(@{mod_option})]]}}"></button>
+	<button class="default kampf-nah kampf-nah-button1 " type="roll" value="@{output_option} &{template:DSA-Nahkampf-AT} {{name=Attacke}} {{subtags=Nahkampf}} {{wurf=[[1d20cs1cf20]]}} {{wert=[[(@{at_roll}+@{mod_option}+@{kampf_modifier})]]}} {{mod=[[(@{mod_option}+@{kampf_modifier})]]}}"></button>
 
 	<span class="kampf-nah kampf-nah-label2" data-i18n="schaden">Schaden</span>
 	<input class="kampf-nah kampf-nah-value2" type="number" name="attr_tp_dice_roll"  value="0" readonly />
@@ -4367,12 +4367,12 @@ Baustelle!
 	<span class="kampf-nah kampf-nah-label4" data-i18n="passierschlag">Passierschlag</span>
   <input class="kampf-nah kampf-nah-value4" type="number" name="attr_passierschlag_roll"  value="0" readonly />
   <input class="kampf-nah" type="number" name="attr_passierschlag_tp_zusatz_roll"  value="0" readonly hidden/>
-  <button class="default kampf-nah kampf-nah-button4 default" type="roll" value="@{output_option} &{template:DSA-Nahkampf-AT} {{name=Nahkampf}} {{subtags=Passierschlag}} {{wurf=[[1d20cs1cf20]]}} {{wert=[[(@{passierschlag_roll}+@{mod_option})]]}} {{mod=[[(@{mod_option})]]}}"></button>
+  <button class="default kampf-nah kampf-nah-button4 default" type="roll" value="@{output_option} &{template:DSA-Nahkampf-AT} {{name=Nahkampf}} {{subtags=Passierschlag}} {{wurf=[[1d20cs1cf20]]}} {{wert=[[(@{passierschlag_roll}+@{mod_option}+@{kampf_modifier})]]}} {{mod=[[(@{mod_option}+@{kampf_modifier})]]}}"></button>
   <button class="default kampf-nah kampf-nah-button5" type="roll" value="@{output_option} &{template:DSA-Nahkampf-TP} {{name=Nahkampf-TP}} {{subtags=Nahkampf}} {{damage=[[[[(@{tp_dice_roll})]]d6+@{tp_zusatz_roll}+@{mod_option}]]}} {{mod=[[(@{mod_option})]]}}">TP</button>
 
 	<span class="kampf-nah kampf-nah-label5"  data-i18n="2-attacke">2. Attacke</span>
   <input class="kampf-nah kampf-nah-value5" type="number" name="attr_at_nh_roll"  value="0" readonly />
-  <button class="default kampf-nah kampf-nah-button6" type="roll" value="@{output_option} &{template:DSA-Nahkampf-AT} {{name=Attacke}} {{subtags=Nahkampf}} {{wurf=[[1d20cs1cf20]]}} {{wert=[[(@{at_nh_roll}+@{mod_option})]]}} {{mod=[[(@{mod_option})]]}}"></button>
+  <button class="default kampf-nah kampf-nah-button6" type="roll" value="@{output_option} &{template:DSA-Nahkampf-AT} {{name=Attacke}} {{subtags=Nahkampf}} {{wurf=[[1d20cs1cf20]]}} {{wert=[[(@{at_nh_roll}+@{mod_option}+@{kampf_modifier})]]}} {{mod=[[(@{mod_option}+@{kampf_modifier})]]}}"></button>
 
 	<span class="kampf-nah kampf-nah-label6" data-i18n="schaden">Schaden</span>
   <input class="kampf-nah kampf-nah-value6" type="number" name="attr_tp_nh_dice_roll"  value="0" readonly />
@@ -4394,19 +4394,19 @@ Baustelle!
 
   <span class="kampf-nah kampf-nah-label8" data-i18n="parade">Parade</span>
   <input class="kampf-nah kampf-nah-value11" type="number" name="attr_pa_roll" value="0" readonly />
-  <button class="default kampf-nah kampf-nah-button9" type="roll" value="@{output_option} &{template:DSA-Nahkampf-VE} {{name=Parade}} {{subtags=Nahkampf}} {{wurf=[[1d20cs1cf20]]}}  {{wert=[[(@{pa_roll}+@{parade_malus}+@{mod_option})]]}} {{mod=[[(@{parade_malus}+@{mod_option})]]}}" />
-  <button class="default kampf-nah kampf-nah-button10" type="roll" value="@{output_option} &{template:DSA-Nahkampf-VE} {{name=halbierte Parade}} {{subtags=Nahkampf}} {{wert=[[(@{pa_roll}+@{parade_malus}+@{mod_option})]]}} {{mod=[[(@{parade_malus}+@{mod_option})]]}}" data-i18n="1/2">1/2</button>
+  <button class="default kampf-nah kampf-nah-button9" type="roll" value="@{output_option} &{template:DSA-Nahkampf-VE} {{name=Parade}} {{subtags=Nahkampf}} {{wurf=[[1d20cs1cf20]]}}  {{wert=[[(@{pa_roll}+@{parade_malus}+@{mod_option}+@{kampf_modifier})]]}} {{mod=[[(@{parade_malus}+@{mod_option}+@{kampf_modifier})]]}}" />
+  <button class="default kampf-nah kampf-nah-button10" type="roll" value="@{output_option} &{template:DSA-Nahkampf-VE} {{name=halbierte Parade}} {{subtags=Nahkampf}} {{wert=[[(@{pa_roll}+@{parade_malus}+@{mod_option}+@{kampf_modifier})]]}} {{mod=[[(@{parade_malus}+@{mod_option}+@{kampf_modifier})]]}}" data-i18n="1/2">1/2</button>
 
   <span class="kampf-nah kampf-nah-label9" data-i18n="schildparade-parierwaffe">Schildparade / Parierwaffe</span>
   <input class="kampf-nah kampf-nah-value12" type="number" name="attr_pa_nh_roll"  value="0" readonly />
-  <button class="default kampf-nah kampf-nah-button11" type="roll" value="@{output_option} &{template:DSA-Nahkampf-VE} {{name=Schildparade}} {{subtags=Nahkampf}} {{wurf=[[1d20cs1cf20]]}}  {{wert=[[(@{pa_nh_roll}+@{parade_malus}+@{mod_option})]]}} {{mod=[[(@{parade_malus}+@{mod_option})]]}}" />
-  <button class="default kampf-nah kampf-nah-button12" type="roll" value="@{output_option} &{template:DSA-Nahkampf-VE} {{name=halbierte Schildparade}} {{subtags=Nahkampf}} {{wert=[[(@{pa_nh_roll}+@{parade_malus}+@{mod_option})]]}} {{mod=[[(@{parade_malus}+@{mod_option})]]}}" data-i18n="1/2">1/2</button>
+  <button class="default kampf-nah kampf-nah-button11" type="roll" value="@{output_option} &{template:DSA-Nahkampf-VE} {{name=Schildparade}} {{subtags=Nahkampf}} {{wurf=[[1d20cs1cf20]]}}  {{wert=[[(@{pa_nh_roll}+@{parade_malus}+@{mod_option}+@{kampf_modifier})]]}} {{mod=[[(@{parade_malus}+@{mod_option}+@{kampf_modifier})]]}}" />
+  <button class="default kampf-nah kampf-nah-button12" type="roll" value="@{output_option} &{template:DSA-Nahkampf-VE} {{name=halbierte Schildparade}} {{subtags=Nahkampf}} {{wert=[[(@{pa_nh_roll}+@{parade_malus}+@{mod_option}+@{kampf_modifier})]]}} {{mod=[[(@{parade_malus}+@{mod_option}+@{kampf_modifier})]]}}" data-i18n="1/2">1/2</button>
 
   <span class="kampf-nah kampf-nah-label10" data-i18n="ausweichen">Ausweichen</span>
   <input class="kampf-nah kampf-nah-value13" type="number" name="attr_ausweichen_zweite_mod" value="0" readonly hidden/>
   <input class="kampf-nah kampf-nah-value14" type="number" name="attr_aw_roll"  value="0" readonly />
-  <button class="default kampf-nah kampf-nah-button13" type="roll" value="@{output_option} &{template:DSA-Nahkampf-VE} {{name=Ausweichen}} {{subtagsNahkampf}} {{wurf=[[1d20cs1cf20]]}}  {{wert=[[(@{aw_roll}+@{parade_malus}+@{mod_option})]]}} {{mod=[[(@{parade_malus}+@{mod_option})]]}}" />
-  <button class="default kampf-nah kampf-nah-button14" type="roll" value="@{output_option} &{template:DSA-Nahkampf-VE} {{name=halbiertes Ausweichen}} {{subtags=Nahkampf}} {{wert=[[(@{aw_roll}+@{parade_malus}+@{mod_option})]]}} {{mod=[[(@{parade_malus}+@{mod_option})]]}}" data-i18n="1/2">1/2</button>
+  <button class="default kampf-nah kampf-nah-button13" type="roll" value="@{output_option} &{template:DSA-Nahkampf-VE} {{name=Ausweichen}} {{subtagsNahkampf}} {{wurf=[[1d20cs1cf20]]}}  {{wert=[[(@{aw_roll}+@{parade_malus}+@{mod_option}+@{kampf_modifier})]]}} {{mod=[[(@{parade_malus}+@{mod_option}+@{kampf_modifier})]]}}" />
+  <button class="default kampf-nah kampf-nah-button14" type="roll" value="@{output_option} &{template:DSA-Nahkampf-VE} {{name=halbiertes Ausweichen}} {{subtags=Nahkampf}} {{wert=[[(@{aw_roll}+@{parade_malus}+@{mod_option}+@{kampf_modifier})]]}} {{mod=[[(@{parade_malus}+@{mod_option}+@{kampf_modifier})]]}}" data-i18n="1/2">1/2</button>
 
 	<span class="kampf-nah kampf-nah-label11" data-i18n="beidhaendigerkampf">Beidhändiger Kampf</span>
 	<input type="checkbox" class="kampf-nah kampf-nah-checkbox1" name="attr_beidhand_kampf" value='1'/>
@@ -4529,7 +4529,7 @@ Baustelle!
 
 	<span class="kampf-fern kampf-fern-cell1" data-i18n="attacke">Attacke</span>
 	<input class="kampf-fern kampf-fern-cell2" type="number" name="attr_fk_roll"  value="0" readonly>
-	<button class="kampf-fern kampf-fern-cell3 default" type="roll" value="@{output_option} &{template:DSA-Fernkampf-AT} {{name=Attacke}} {{subtags=Fernkampf}} {{wurf=[[1d20cs1cf20]]}} {{wert=[[(@{fk_roll}+@{gesamt_fk_mod}+@{mod_option})]]}} {{mod=[[(@{gesamt_fk_mod}+@{mod_option})]]}}"></button>
+	<button class="kampf-fern kampf-fern-cell3 default" type="roll" value="@{output_option} &{template:DSA-Fernkampf-AT} {{name=Attacke}} {{subtags=Fernkampf}} {{wurf=[[1d20cs1cf20]]}} {{wert=[[(@{fk_roll}+@{gesamt_fk_mod}+@{mod_option}+@{kampf_modifier})]]}} {{mod=[[(@{gesamt_fk_mod}+@{mod_option}+@{kampf_modifier})]]}}"></button>
 	  <span class="kampf-fern kampf-fern-cell4" data-i18n="schaden">Schaden</span>
 		<div class="kampf-fern kampf-fern-cell5">
 			<input  type="number" name="attr_fk_tp_dice_roll"  value="0" readonly />
