added armor class attribute, move combat modifier to subtab

--- a/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.html
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.html
@@ -4063,8 +4063,8 @@ Baustelle!
     <button class="kampf-header kampf-header-ini-roll default" type="roll" value="&{template:DSA-Initiative} {{Name=@{character_name}}} {{Wert=[[1d6+@{ini_gesamt}+@{mod_option}+@{kampf_modifier}+(@{ini_grundwert}/100)&{tracker}]]}} {{mod=[[(@{mod_option}+@{kampf_modifier})]]}}">INI</button>
     <span class="kampf-header kampf-header-label1" data-i18n="aktstatus">akt. Status </span>
 		<input class="kampf-header kampf-header-value1" type="number" name="attr_kampfstatus_modifier" value="0" readonly/>
-		<span class="kampf-header kampf-header-label1b" data-i18n="freier-modifikator">freier Kampf-Mod. </span>
-		<input class="kampf-header kampf-header-value1b" type="number" name="attr_kampf_modifier" value="0" />
+		<span class="kampf-header kampf-header-label1b" data-i18n="ruestungsschutz">Rüstungsschutz (RS)</span>
+		<input class="kampf-header kampf-header-value1b" type="number" name="attr_rs" value="0" />
     <span class="kampf-header kampf-header-label2" data-i18n="sf-modat">SF-Mod. AT</span>
 		<input class="kampf-header kampf-header-value2" type="number" name="attr_at_sf_mod"  value="0" readonly/>
     <span class="kampf-header kampf-header-label3" data-i18n="sf-modpa">SF-Mod. PA</span>
@@ -4471,6 +4471,9 @@ Baustelle!
 			<span class="kampf-nah kampf-nah2-label14" data-i18n="liegend">Liegend</span>
 			<input class="kampf-nah kampf-nah2-value12" name="attr_liegend" type="checkbox" value="1"/>
 
+			<span class="kampf-nah kampf-nah2-label15" data-i18n="freier-modifikator">freier Kampf-Mod. </span>
+			<input class="kampf-nah kampf-nah2-value13" type="number" name="attr_kampf_modifier" value="0" />
+
 	</div>
 	<div class="kampf-nah">
 		<table >
@@ -4530,7 +4533,9 @@ Baustelle!
 	<span class="kampf-fern kampf-fern-cell1" data-i18n="attacke">Attacke</span>
 	<input class="kampf-fern kampf-fern-cell2" type="number" name="attr_fk_roll"  value="0" readonly>
 	<button class="kampf-fern kampf-fern-cell3 default" type="roll" value="@{output_option} &{template:DSA-Fernkampf-AT} {{name=Attacke}} {{subtags=Fernkampf}} {{wurf=[[1d20cs1cf20]]}} {{wert=[[(@{fk_roll}+@{gesamt_fk_mod}+@{mod_option}+@{kampf_modifier})]]}} {{mod=[[(@{gesamt_fk_mod}+@{mod_option}+@{kampf_modifier})]]}}"></button>
-	  <span class="kampf-fern kampf-fern-cell4" data-i18n="schaden">Schaden</span>
+	<span class="kampf-fern kampf-fern-cell46" data-i18n="freier-modifikator">freier Kampf-Mod. </span>
+	<input class="kampf-fern kampf-fern-cell47" type="number" name="attr_kampf_modifier" value="0" />
+		<span class="kampf-fern kampf-fern-cell4" data-i18n="schaden">Schaden</span>
 		<div class="kampf-fern kampf-fern-cell5">
 			<input  type="number" name="attr_fk_tp_dice_roll"  value="0" readonly />
 			<span  data-i18n="d6">W6+</span>
