--- a/Delta Green by Arc Dream Publishing/deltagreen.html
+++ b/Delta Green by Arc Dream Publishing/deltagreen.html
@@ -2,6 +2,8 @@
 <!--VERSION-->
 <!-- =============================-->
 <input name="attr_version" type="hidden" value="1"/>
+<!--MIXINS-->
+<!--STYLED CHECKBOXES-->
 <!-- TABS-->
 <!-- =============================-->
 <input class="type" name="attr_sheet_type" type="hidden" value="character"/>
@@ -252,7 +254,7 @@
           <div class="vert-line"></div>
           <h2 class="center">score</h2>
         </div>
-        <div class="grid section">
+        <div class="repeating-container border-bottom">
           <fieldset class="repeating_bonds">
             <div class="grid section border-bottom">
               <label title="bond name">
@@ -275,16 +277,27 @@
       <div class="grid section-incidents">
         <div class="grid section border-bottom">
           <h2 class="aligned-left">13. incidents of san loss without going insane</h2>
-          <div class="grid section border-bottom">
-            <label title="violence checkbox 1">
-              <input name="attr_violence" title="@{repeating_bonds_${x}_violence}" type="checkbox" value="1"/><span></span>
-            </label>
-            <label title="violence checkbox 2">
-              <input name="attr_violence" title="@{repeating_bonds_${x}_violence}" type="checkbox" value="2"/><span></span>
-            </label>
-            <label title="violence checkbox 3">
-              <input name="attr_violence" title="@{repeating_bonds_${x}_violence}" type="checkbox" value="3"/><span></span>
-            </label>
+          <div class="grid section incidents-body border-bottom">
+            <h3>violence</h3>
+            <label title="violence 1">
+              <input name="attr_violence" title="@{repeating_bonds_${x}_violence}" type="checkbox" value="1"/>
+            </label><span class="styled-checkbox-1"></span>
+            <label title="violence 2">
+              <input name="attr_violence" title="@{repeating_bonds_${x}_violence}" type="checkbox" value="2"/>
+            </label><span class="styled-checkbox-2"></span>
+            <label title="violence 3">
+              <input name="attr_violence" title="@{repeating_bonds_${x}_violence}" type="checkbox" value="3"/>
+            </label><span class="styled-checkbox-3"></span><span class="italic">adapted</span>
+            <h3>helplessness</h3>
+            <label title="helplessness 1">
+              <input name="attr_helplessness" title="@{repeating_bonds_${x}_helplessness}" type="checkbox" value="1"/>
+            </label><span class="styled-checkbox-1"></span>
+            <label title="helplessness 2">
+              <input name="attr_helplessness" title="@{repeating_bonds_${x}_helplessness}" type="checkbox" value="2"/>
+            </label><span class="styled-checkbox-2"></span>
+            <label title="helplessness 3">
+              <input name="attr_helplessness" title="@{repeating_bonds_${x}_helplessness}" type="checkbox" value="3"/>
+            </label><span class="styled-checkbox-3"></span><span class="italic">adapted</span>
           </div>
         </div>
       </div>
