--- a/Delta Green by Arc Dream Publishing/deltagreen.html
+++ b/Delta Green by Arc Dream Publishing/deltagreen.html
@@ -277,28 +277,30 @@
       <div class="grid section-incidents">
         <div class="grid section border-bottom">
           <h2 class="aligned-left">13. incidents of san loss without going insane</h2>
-          <div class="grid section incidents-body border-bottom">
-            <h3>violence</h3>
-            <label title="violence 1">
-              <input name="attr_violence" title="@{repeating_bonds_${x}_violence}" type="checkbox" value="1"/>
-            </label><span class="styled-checkbox-1"></span>
-            <label title="violence 2">
-              <input name="attr_violence" title="@{repeating_bonds_${x}_violence}" type="checkbox" value="2"/>
-            </label><span class="styled-checkbox-2"></span>
-            <label title="violence 3">
-              <input name="attr_violence" title="@{repeating_bonds_${x}_violence}" type="checkbox" value="3"/>
-            </label><span class="styled-checkbox-3"></span><span class="italic">adapted</span>
-            <h3>helplessness</h3>
-            <label title="helplessness 1">
-              <input name="attr_helplessness" title="@{repeating_bonds_${x}_helplessness}" type="checkbox" value="1"/>
-            </label><span class="styled-checkbox-1"></span>
-            <label title="helplessness 2">
-              <input name="attr_helplessness" title="@{repeating_bonds_${x}_helplessness}" type="checkbox" value="2"/>
-            </label><span class="styled-checkbox-2"></span>
-            <label title="helplessness 3">
-              <input name="attr_helplessness" title="@{repeating_bonds_${x}_helplessness}" type="checkbox" value="3"/>
-            </label><span class="styled-checkbox-3"></span><span class="italic">adapted</span>
-          </div>
+        </div>
+        <div class="grid section incidents-body">
+          <h3 class="center">violence</h3>
+          <input name="attr_violence" type="hidden"/>
+          <label class="styled-checkbox" title="violence 1">
+            <input name="attr_violence_1" title="@{repeating_bonds_${x}_violence}" type="checkbox" value="1"/><span></span>
+          </label>
+          <label class="styled-checkbox" title="violence 2">
+            <input name="attr_violence_2" title="@{repeating_bonds_${x}_violence}" type="checkbox" value="2"/><span></span>
+          </label>
+          <label class="styled-checkbox" title="violence 3">
+            <input name="attr_violence_3" title="@{repeating_bonds_${x}_violence}" type="checkbox" value="3"/><span></span>
+          </label><span class="italic">adapted</span>
+          <h3 class="center">helplessness</h3>
+          <input name="attr_helplessness" type="hidden"/>
+          <label class="styled-checkbox" title="helplessness 1">
+            <input name="attr_helplessness_1" title="@{repeating_bonds_${x}_helplessness}" type="checkbox" value="1"/><span></span>
+          </label>
+          <label class="styled-checkbox" title="helplessness 2">
+            <input name="attr_helplessness_2" title="@{repeating_bonds_${x}_helplessness}" type="checkbox" value="2"/><span></span>
+          </label>
+          <label class="styled-checkbox" title="helplessness 3">
+            <input name="attr_helplessness_3" title="@{repeating_bonds_${x}_helplessness}" type="checkbox" value="3"/><span></span>
+          </label><span class="italic">adapted</span>
         </div>
       </div>
     </div>
