[Update] For last version of rules

--- a/Eclipse Phase V2/Eclipse Phase V2.html
+++ b/Eclipse Phase V2/Eclipse Phase V2.html
@@ -523,7 +523,7 @@
 					</button>
 					<img src="https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Eclipse%20Phase%20V2/images/Vigor.png" data-i18n-title="vigor" title="Vigor" />
 					<input type="text" name="attr_spe-fray" data-i18n-placeholder="specializations" placeholder="Specializations" />
-					<input type="number" name="attr_total-fray" value="(@{reflexes}+@{rank-fray}+@{temp-fray})" disabled />
+					<input type="number" name="attr_total-fray" value="((@{reflexes}*2)+@{rank-fray}+@{temp-fray})" disabled />
 					<input type="number" name="attr_rank-fray" value="0" />
 					<input type="number" name="attr_temp-fray" value="0" />
 					<select name="attr_apt-fray" disabled>
@@ -691,7 +691,7 @@
 					</button>
 					<img src="https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Eclipse%20Phase%20V2/images/Insight.png" data-i18n-title="insight" title="Insight" />
 					<input type="text" name="attr_spe-perceive" data-i18n-placeholder="specializations" placeholder="Specializations" />
-					<input type="number" name="attr_total-perceive" value="(@{intuition}+@{rank-perceive}+@{temp-perceive})" disabled />
+					<input type="number" name="attr_total-perceive" value="((@{intuition}*2)+@{rank-perceive}+@{temp-perceive})" disabled />
 					<input type="number" name="attr_rank-perceive" value="0" />
 					<input type="number" name="attr_temp-perceive" value="0" />
 					<select name="attr_apt-perceive" disabled>
